--- a/index.html
+++ b/index.html
@@ -27,33 +27,30 @@
           <span class="logo">Web</span
           ><span class="logo header-studio">Studio</span>
         </a>
+        <button type="button" class="mobile-menu-btn" data-menu-button>
+          <svg class="icon-menu" width="40" height="40">
+            <use href="./images/maine/sprite.svg#icon-mob-menu "></use>
+          </svg>
+        </button>
 
-        <div
-          class="mobile-menu-container is-open"
-          id="menu-container"
-          data-menu
-        >
-          <button type="button" class="mobile-menu-btn-close" data-menu-close>
-            <svg class="icon-cross" width="40" height="40">
-              <use href="./images/maine/sprite.svg#icon-close "></use>
-            </svg>
-          </button>
-          <!-- <div class="menu-container__flex"> -->
-          <ul class="site-nav-list list">
-            <li class="site-nav-list__item">
-              <a class="link current" href="./" target="_blank"
-                ><span>Студия</span></a
-              >
-            </li>
-            <li class="site-nav-list__item">
-              <a class="link" href="./portfolio.html" target="_blank"
-                >Портфолио</a
-              >
-            </li>
-            <li class="site-nav-list__item">
-              <a class="link" href="./" target="_blank">Контакти</a>
-            </li>
-          </ul>
+        <div class="mobile-menu-container" id="menu-container" data-menu>
+          <nav class="site-nav">
+            <ul class="site-nav-list list">
+              <li class="site-nav-list__item">
+                <a class="link current" href="./" target="_blank"
+                  ><span>Студия</span></a
+                >
+              </li>
+              <li class="site-nav-list__item">
+                <a class="link" href="./portfolio.html" target="_blank"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="site-nav-list__item">
+                <a class="link" href="./" target="_blank">Контакти</a>
+              </li>
+            </ul>
+          </nav>
 
           <ul class="header-contact list">
             <li class="header-contact__item--mail">
@@ -83,7 +80,6 @@
               </a>
             </li>
           </ul>
-          <!-- </div> -->
 
           <ul class="mobile-menu-soclink-list list">
             <li class="mobile-menu-soclink-list-item item">
@@ -111,13 +107,12 @@
               </a>
             </li>
           </ul>
+          <button type="button" class="mobile-menu-btn-close" data-menu-close>
+            <svg class="icon-cross" width="40" height="40">
+              <use href="./images/maine/sprite.svg#icon-close "></use>
+            </svg>
+          </button>
         </div>
-
-        <button type="button" class="mobile-menu-btn" data-menu-button>
-          <svg class="icon-menu" width="40" height="40">
-            <use href="./images/maine/sprite.svg#icon-mob-menu "></use>
-          </svg>
-        </button>
       </div>
     </header>
 
