--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 class="header-contact__link--mail link"
                 href="mailto:info@devstudio.com"
               >
-                <svg class="header-contact__icon--mail" width="16" height="12">
+                <svg class="header-contact__icon--mail">
                   <use
                     href="./images/maine/sprite.svg#icon-hat-envelopehover"
                   ></use>
@@ -71,7 +71,7 @@
                 class="header-contact__link--tel link"
                 href="tel:+380961111111"
               >
-                <svg class="header-contact__icon--tel" width="10" height="16">
+                <svg class="header-contact__icon--tel">
                   <use
                     href="./images/maine/sprite.svg#icon-hat-smartphone"
                   ></use>
@@ -93,13 +93,13 @@
               </a>
             </li>
             <li class="mobile-menu-soclink-list-item item">
-              <a href="" class="mobile-menu-soclink-link link" target="blank">
+              <a href="./" class="mobile-menu-soclink-link link" target="blank">
                 Facebook
               </a>
             </li>
             <li class="mobile-menu-soclink-list-item item">
               <a
-                href=""
+                href="./"
                 class="mobile-menu-soclink-link mobile-menu-soclink-link--Linkedin link"
                 target="blank"
               >
@@ -610,7 +610,7 @@
         </button>
 
         <form name="modal-form" class="modal-form" autocomplete="off">
-          <p class="call-back">Оставьте свои данные, мы вам перезвоним</p>
+          <p class="modal-form-text">Оставьте свои данные, мы вам перезвоним</p>
           <div class="name-form-field">
             <label for="name" class="name-label">Имя</label>
             <div class="relative">
@@ -677,7 +677,7 @@
             <a href="" class="exept0"> Условия договора</a>
           </div>
 
-          <button type="submit" class="form-send">Отправить</button>
+          <button type="submit" class="button-form-send">Отправить</button>
         </form>
       </div>
     </div>
