--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <section class="team">
         <div class="container">
           <h2>Наша команда</h2>
-          <ul class="team-list list">
+          <ul class="team__list list">
             <li class="item">
               <a href="" class="team-link" target="_blank">
                 <img
