--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         </div>
 
         <div class="footer-form">
-          <form name="sign-up-form" class="footer-sign-up">
+          <form class="footer-sign-up" name="sign-up-form">
             <b>Подпишитесь на рассылку</b>
             <div class="sign-up">
               <input
