--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                 class="footer-form-email"
                 placeholder="E-mail"
               />
-              <button type="submit" class="footer-sign-up-bth">
+              <button class="footer-sign-up-bth" type="submit">
                 Подписаться
                 <svg class="sign-up-icon" width="24" height="24">
                   <use href="./images/maine/sprite.svg#icon-sign-up"></use>
