--- a/portfolio.html
+++ b/portfolio.html
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+    <!-- ===================HEADER ================-->
+
     <header class="header">
       <div class="container page-header">
         <nav class="main-nav">
@@ -66,11 +68,13 @@
     </header>
 
     <main>
-      <!--Портфолио-->
+      <!--=============PORTFOLIO===================-->
+
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
-          <ul class="list navigation">
+
+          <ul class="navigation list">
             <li class="item">
               <button class="button secondary all" type="button">Все</button>
             </li>
@@ -95,6 +99,7 @@
               </button>
             </li>
           </ul>
+
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
@@ -117,6 +122,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -140,6 +146,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -163,6 +170,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -186,6 +194,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -209,6 +218,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -232,6 +242,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -255,6 +266,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -270,7 +282,6 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-
                 <div class="portfolio-text">
                   <h2 class="portfolio-title">
                     Проект <span lang="en"></span> LAB
@@ -279,6 +290,7 @@
                 </div>
               </a>
             </li>
+
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
                 <div class="portfolio-overlay">
@@ -304,6 +316,8 @@
         </div>
       </section>
     </main>
+
+    <!-- ====================FOOTER================== -->
 
     <footer class="footer">
       <div class="container basement">
