--- a/index.html
+++ b/index.html
@@ -207,12 +207,36 @@
             <li class="job-item">
               <a class="job-link" href="" target="_blank">
                 <div class="job-thumb">
-                  <img
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/maine/job/job-1.webp    1x,
+                        ./images/maine/job/job-1@2x.webp 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/maine/job/job-1.jpg    1x,
+                        ./images/maine/job/job-1@2x.jpg 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+
+                    <img
+                      src="./images/maine/job/job-1.jpg"
+                      alt="Десктопные приложения"
+                    />
+                  </picture>
+
+                  <!-- <img
                     src="./images/maine/job-desktop-app.jpg"
                     alt="Десктопные приложения"
                     width="370"
                     height="294"
-                  />
+                  /> -->
                   <p class="job-text">Десктопные приложения</p>
                 </div>
               </a>
@@ -220,12 +244,34 @@
             <li class="job-item">
               <a href="" target="_blank">
                 <div class="job-thumb">
-                  <img
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/maine/job/job-2.webp    1x,
+                        ./images/maine/job/job-2@2x.webp 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/maine/job/job-2.jpg    1x,
+                        ./images/maine/job/job-2@2x.jpg 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+                    <img
+                      src="./images/maine/job/job-2.jpg"
+                      alt="Мобильные приложения"
+                    />
+                  </picture>
+                  <!-- <img
                     src="./images/maine/job-mobile-app.jpg"
                     alt="Мобильные приложения"
                     width="370"
                     height="294"
-                  />
+                  /> -->
                   <p class="job-text">Мобильные приложения</p>
                 </div>
               </a>
@@ -233,12 +279,34 @@
             <li class="job-item">
               <a href="" target="_blank">
                 <div class="job-thumb">
-                  <img
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/maine/job/job-3.webp    1x,
+                        ./images/maine/job/job-3@2x.webp 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/maine/job/job-3.jpg    1x,
+                        ./images/maine/job/job-3@2x.jpg 2x
+                      "
+                      type="image/webp"
+                      media="(min-width:1200px)"
+                    />
+                    <img
+                      src="./images/maine/job/job-3.jpg"
+                      alt="Дизайнерские решения"
+                    />
+                  </picture>
+                  <!-- <img
                     src="./images/maine/job-design.jpg"
                     alt="Дизайнерские решения"
                     width="370"
                     height="294"
-                  />
+                  /> -->
                   <p class="job-text">Дизайнерские решения</p>
                 </div>
               </a>
