edit after submit not 100vh

--- a/portfolio.html
+++ b/portfolio.html
@@ -149,6 +149,7 @@
             </li>
           </ul>
 
+          <h2 class="visually-hidden">Список портфолио</h2>
           <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a class="portfolio-link" href="">
@@ -214,7 +215,7 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">Технокряк</h2>
+                  <h3 class="portfolio-title">Технокряк</h3>
                   <p class="portfolio-type">Веб-сайт</p>
                 </div>
               </a>
@@ -285,9 +286,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Постер<span lang="en">New Orlean vs Golden Star</span>
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Дизайн</p>
                 </div>
               </a>
@@ -357,9 +358,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Ресторан <span lang="en">Seafood</span>
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Приложение</p>
                 </div>
               </a>
@@ -430,9 +431,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Проект <span lang="en">Prime</span>
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Маркетинг</p>
                 </div>
               </a>
@@ -503,9 +504,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Проект <span lang="en">Boxes</span>
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Приложение</p>
                 </div>
               </a>
@@ -575,9 +576,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title" lang="en">
+                  <h3 class="portfolio-title" lang="en">
                     Inspiration has no Borders
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Веб-сайт</p>
                 </div>
               </a>
@@ -647,9 +648,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Издание <span lang="en"></span> Limited Edition
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Дизайн</p>
                 </div>
               </a>
@@ -719,9 +720,9 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title">
+                  <h3 class="portfolio-title">
                     Проект <span lang="en"></span> LAB
-                  </h2>
+                  </h3>
                   <p class="portfolio-type">Маркетинг</p>
                 </div>
               </a>
@@ -791,7 +792,7 @@
                   </p>
                 </div>
                 <div class="portfolio-text">
-                  <h2 class="portfolio-title" lang="en">Growing Business</h2>
+                  <h3 class="portfolio-title" lang="en">Growing Business</h3>
                   <p class="portfolio-type">Приложение</p>
                 </div>
               </a>
