--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <header class="header">
       <div class="container page-header">
-        <a class="logo" href="/" target="_blank">
+        <a class="logo" href="/">
           <span class="logo">Web</span
           ><span class="logo header-studio">Studio</span>
         </a>
@@ -37,17 +37,13 @@
           <nav class="site-nav">
             <ul class="site-nav-list list">
               <li class="site-nav-list__item">
-                <a class="link current" href="./" target="_blank"
-                  ><span>Студия</span></a
-                >
+                <a class="link current" href="./"><span>Студия</span></a>
               </li>
               <li class="site-nav-list__item">
-                <a class="link" href="./portfolio.html" target="_blank"
-                  >Портфолио</a
-                >
+                <a class="link" href="./portfolio.html">Портфолио</a>
               </li>
               <li class="site-nav-list__item">
-                <a class="link" href="./" target="_blank">Контакти</a>
+                <a class="link" href="./">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -205,7 +201,7 @@
           <h2>Чем мы занимаемся</h2>
           <ul class="job-list list">
             <li class="job-item">
-              <a class="job-link" href="" target="_blank">
+              <a class="job-link" href="">
                 <div class="job-thumb">
                   <picture>
                     <source
@@ -242,7 +238,7 @@
               </a>
             </li>
             <li class="job-item">
-              <a href="" target="_blank">
+              <a href="">
                 <div class="job-thumb">
                   <picture>
                     <source
@@ -277,7 +273,7 @@
               </a>
             </li>
             <li class="job-item">
-              <a href="" target="_blank">
+              <a href="">
                 <div class="job-thumb">
                   <picture>
                     <source
@@ -296,9 +292,10 @@
                       type="image/webp"
                       media="(min-width:1200px)"
                     />
+
                     <img
                       src="./images/maine/job/job-3.jpg"
-                      alt="Дизайнерские решения"
+                      alt="Мобильные приложения"
                     />
                   </picture>
                   <!-- <img
@@ -322,7 +319,7 @@
           <h2>Наша команда</h2>
           <ul class="team__list list">
             <li class="item">
-              <a href="" class="team-link" target="_blank">
+              <a href="" class="team-link">
                 <picture>
                   <source
                     srcset="
@@ -382,7 +379,7 @@
               </a>
               <ul class="socnetworks list">
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-instagram"
@@ -391,7 +388,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-twitter"
@@ -400,7 +397,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-facebook"
@@ -409,7 +406,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-linkedin"
@@ -420,7 +417,7 @@
               </ul>
             </li>
             <li class="item">
-              <a href="" class="team-link" target="_blank">
+              <a href="" class="team-link">
                 <picture>
                   <source
                     srcset="
@@ -480,7 +477,7 @@
               </a>
               <ul class="socnetworks list">
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-instagram"
@@ -489,7 +486,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-twitter"
@@ -498,7 +495,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-facebook"
@@ -507,7 +504,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-linkedin"
@@ -518,7 +515,7 @@
               </ul>
             </li>
             <li class="item">
-              <a href="" class="team-link" target="_blank">
+              <a href="" class="team-link">
                 <picture>
                   <source
                     srcset="
@@ -578,7 +575,7 @@
               </a>
               <ul class="socnetworks list">
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-instagram"
@@ -587,7 +584,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-twitter"
@@ -596,7 +593,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-facebook"
@@ -605,7 +602,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-linkedin"
@@ -616,7 +613,7 @@
               </ul>
             </li>
             <li class="item">
-              <a href="" class="team-link" target="_blank">
+              <a href="" class="team-link">
                 <picture>
                   <source
                     srcset="
@@ -676,7 +673,7 @@
               </a>
               <ul class="socnetworks list">
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-instagram"
@@ -685,7 +682,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-twitter"
@@ -694,7 +691,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-facebook"
@@ -703,7 +700,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="soclink">
+                  <a href="" class="soclink" target="blank">
                     <svg class="soclink-icon" width="20" height="20">
                       <use
                         href="./images/maine/sprite.svg#icon-soc-linkedin"
@@ -773,7 +770,7 @@
     <footer class="footer">
       <div class="container basement">
         <div class="footer-logo-address">
-          <a class="logo" href="/" target="_blank"
+          <a class="logo" href="/"
             ><span class="logo web">Web</span
             ><span class="logo footer-studio">Studio</span></a
           >
