--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
     <header class="header">
       <div class="container page-header">
-        <a class="logo" href="/" target="_blank">
+        <a class="logo" href="/">
           <span class="logo">Web</span
           ><span class="logo header-studio">Studio</span>
         </a>
@@ -37,17 +37,13 @@
           <nav class="site-nav">
             <ul class="site-nav-list list">
               <li class="site-nav-list__item">
-                <a class="link" href="./" target="_blank"
-                  ><span>Студия</span></a
-                >
+                <a class="link" href="./"><span>Студия</span></a>
               </li>
               <li class="site-nav-list__item">
-                <a class="link current" href="./portfolio.html" target="_blank"
-                  >Портфолио</a
-                >
+                <a class="link current" href="./portfolio.html">Портфолио</a>
               </li>
               <li class="site-nav-list__item">
-                <a class="link" href="./" target="_blank">Контакти</a>
+                <a class="link" href="./">Контакти</a>
               </li>
             </ul>
           </nav>
@@ -807,7 +803,7 @@
     <footer class="footer">
       <div class="container basement">
         <div class="footer-logo-address">
-          <a class="logo" href="/" target="_blank"
+          <a class="logo" href="/"
             ><span class="logo web">Web</span
             ><span class="logo footer-studio">Studio</span></a
           >
