--- a/index.html
+++ b/index.html
@@ -929,9 +929,11 @@
           </div>
 
           <div class="exept-form-field0">
-            <input type="checkbox" name="exept0" class="checkbox0" id="check" />
+            <input class="checkbox0" type="checkbox" name="exept0" id="check" />
             <label class="checkbox-label0" for="check">
-              <span>Соглашаюсь с рассылкой и принимаю</span>
+              <span class="chekbox-text"
+                >Соглашаюсь с рассылкой и принимаю</span
+              >
             </label>
             <a href="" class="exept0"> Условия договора</a>
           </div>
